# cad-suite

./: .gitignore  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
commands/: setup.md
skills/cad/explorer/components/: CadWorkspace.js
skills/cad/scripts/render/: cli.py
skills/robot-motion/: SKILL.md  environment.yml
skills/robot-motion/agents/: openai.yaml
skills/robot-motion/references/: motion-artifacts.md
skills/robot-motion/scripts/: check-motion-server.sh  conda-common.sh  run-motion-server.sh  setup.sh
skills/robot-motion/scripts/gen_motion_artifacts/: cli.py
skills/robot-motion/scripts/gen_motion_artifacts/tests/: test_cli.py
skills/robot-motion/server/: pyproject.toml
skills/robot-motion/server/motion_server/: context.py  dispatcher.py  joint_state_seed.py  protocol.py  provider_loader.py  server.py
skills/robot-motion/server/motion_server/providers/: fake.py
skills/robot-motion/server/tests/: test_context.py  test_moveit_py_provider.py  test_protocol.py
skills/urdf/: SKILL.md
