[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "motion_server"
version = "0.1.0"
description = "Local ROS 2 motion websocket server for CAD Explorer URDF IK and planning."
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6",
  "websockets>=12",
]

[project.scripts]
motion_server = "motion_server.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["motion_server*"]
namespaces = true
